# Assignments_JKozak_Cpp

./: CMakeLists.txt  README.md
Assignments/: Assignment_1.cpp  Assignment_1.h  Assignment_2.cpp  Assignment_2.h  Assignment_3.cpp  Assignment_3.h  Assignment_4.cpp  Assignment_4.h  Assignment_5.cpp  Assignment_5.h  Assignment_6.cpp  Assignment_6.h  Repetition_1.cpp  Repetition_1.h  Repetition_2.cpp  Repetition_2.h  lista.txt  main  main.cpp  statki.cpp  statki.h
