cmake_minimum_required(VERSION 3.15)
project(Assignments_JKozak_Cpp)

set(CMAKE_CXX_STANDARD 20)

add_executable(Assignments_JKozak_Cpp Assignments/Assignment_1.cpp Assignments/Assignment_2.cpp Assignments/Assignment_2.h Assignments/Assignment_1.h Assignments/main.cpp Assignments/Assignment_3.cpp Assignments/Assignment_3.h)