cmake_minimum_required(VERSION 3.15)
project(Assignments_JKozak_Cpp)

set(CMAKE_CXX_STANDARD 20)

add_executable(Assignments_JKozak_Cpp Assignments/Assignment_1.cpp Assignments/Assignment_2.cpp Assignments/Assignment_2.h Assignments/Assignment_1.h Assignments/main.cpp Assignments/Assignment_3.cpp Assignments/Assignment_3.h Assignments/Repetition_1.cpp Assignments/Repetition_1.h Assignments/Assignment_4.cpp Assignments/Assignment_4.h Assignments/Assignment_5.cpp Assignments/Assignment_5.h Assignments/Repetition_2.cpp Assignments/Repetition_2.h Assignments/Assignment_6.cpp Assignments/Assignment_6.h Assignments/statki.cpp Assignments/statki.h)